# letters_game

./: Cargo.toml  README.md  letters.d.ts  letters.js  letters_bg.wasm.d.ts
benches/: Cargo.toml
benches/src/: bench.rs
dictionaries/: spa.txt
src/: game_core.rs  game_data.rs  game_ui.rs  main.rs  style.rs  ui_text.rs
web_version/: index.html  letters_bg.wasm.d.ts
