[package]
name = "letters"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rustc-hash = "1.1.0"
iced = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
