[package]
name = "letters"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
iced = "0.3"
getrandom = { version = "0.2.6", features = ["js"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = ["benches"]

[profile.bench]
debug = true
lto = true
codegen-units = 1
