[package]
name = "letter-benchs"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.4"
rand = "0.8.3"

[[bench]]
name = "benchmarks"
harness = false
path = "src/bench.rs"